--- a/05-File-Management.Rmd
+++ b/05-File-Management.Rmd
@@ -6,8 +6,8 @@ This chapter provides an overview of Vibe's Graphical User Interface (GUI).
 
 **The following is covered in this chapter:**
 
--  5.1 Show Menu
--  5.2 Load Vector Show
+-  [5.1 Show Menu](https://vibemanual.compulite.com/file-management.html#show-menu)
+-  [5.2 Load Vector Show](https://vibemanual.compulite.com/file-management.html#load-vector-show)
 
 
 ## Show Menu
@@ -17,7 +17,7 @@ The Show menu is the first item of the {VIBE} Menu. It contains 5 sub menus:
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fd1qUl43R5aNuzM0Vd4zj%2F5.1.png?alt=media&token=2a502a88-1fe4-4648-8ed2-0606cc272d37)
 
-1.  **{New Show}** - Opens the New Show pop-up with options for {Cancel} {Don't Save} {Save}.
+1.  **{New Show}** - Opens the **New Show** pop-up with options for {Cancel} {Don't Save} {Save}.
     
 2.  **{Save Show}** - Directly updates the current show file. A Save Progress pop-up will open and automatically close on completion of the save.
     
@@ -28,9 +28,9 @@ The Show menu is the first item of the {VIBE} Menu. It contains 5 sub menus:
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FRPNEzph0cLWgAv4qbh5L%2F5.1.1.webp?alt=media&token=e14277ce-fdef-434a-b09f-b14005ca425b)
 
-**Save Show/Load Show Browser**
+ <p align=center> Save Show/Load Show Browser</p>
 
-5. **{Load Vector Show}** - (link)
+5. **{Load Vector Show}** - ([5.2 Load Vector Show](https://vibemanual.compulite.com/file-management.html#load-vector-show)).
 
 ## Load Vector Show
 
@@ -39,48 +39,48 @@ Vector Shows may be loaded with the following limitations:
 
 **Devices:**
 
-◾ If a matching device exists in Vibe that device will be used. Modes will be matched. 
+    ◾ If a matching device exists in Vibe that device will be used. Modes will be matched. 
 
-◾ If a similar device exists, it will be used. Modes will try to be matched. 
+    ◾ If a similar device exists, it will be used. Modes will try to be matched. 
 
-◾ If no match or close match is found, a generic device will be created.
+    ◾ If no match or close match is found, a generic device will be created.
 
 **Patch:**
 
-◾ Vector device parameter DMX will be mapped to Vibe parameter DMX.
+    ◾ Vector device parameter DMX will be mapped to Vibe parameter DMX.
 
 **Qlists**:
 
-◾ Qlists will be matched.
+    ◾ Qlists will be matched.
 
 **Cues and Cue Values:**
 
-◾ Matching Cues will be created with Vector cue parameter values matched to Vibe cue parameter values.
+    ◾ Matching Cues will be created with Vector cue parameter values matched to Vibe cue parameter values.
 
 **Temp Cues:**
 
-◾ Temp Cues are converted to Vibe Scenes.
+    ◾ Temp Cues are converted to Vibe Scenes.
 
 **Vector Submasters:**
 
-◾ Submasters are converted to Vibe Scene Submasters.
+    ◾ Submasters are converted to Vibe Scene Submasters.
 
 **Groups:**
 
-◾ Groups will be matched.
+    ◾ Groups will be matched.
 
 **Snaps:**
 
-◾ Snaps will be mapped with Vector physical playbacks being mapped to Vibe virtual controllers when the number of Vector Playbacks exceeds the amount of Vibe Controllers.
+    ◾ Snaps will be mapped with Vector physical playbacks being mapped to Vibe virtual controllers when the number of Vector Playbacks exceeds the amount of Vibe Controllers.
 
 **Macros:**
 
-◾ Currently not supported.
+    ◾ Currently not supported.
 
 **Effects:**
 
-◾ Currently not supported but under development.
+    ◾ Currently not supported but under development.
 
 **Vector Playbacks** ⟶ **Vibe Controllers:**
 
-◾ Paging is matched and all button functions common to Vector and Vibe are matched.
+    ◾ Paging is matched and all button functions common to Vector and Vibe are matched.
