--- a/06-Patch.Rmd
+++ b/06-Patch.Rmd
@@ -5,23 +5,26 @@ This chapter provides an overview of Vibe's Graphical User Interface (GUI).
 
 **The following is covered in this chapter:**
 
--  6.1.   Fixture Sets
--  6.1.1  Edit Sets
--  6.2.   Import Devices
--  6.3.   Advanced Search
--  6.4.   Create and Patch imported fixtures
--  6.4.1. Drag and Drop Patch
--  6.4.2. Modify Patch
--  6.5.   Configuring Physical DMX 1/0
--  6.6.   Patching Inputs
--  6.7.   Parking Addresses and Fixtures
+-  [6.1.   Fixture Sets](https://vibemanual.compulite.com/patch.html#fixture-sets)
+-  [6.2.   Import Devices](https://vibemanual.compulite.com/patch.html#import-devices)
+-  [6.3.   Advanced Search](https://vibemanual.compulite.com/patch.html#advanced-search)
+-  [6.4.   Create and Patch imported fixtures](https://vibemanual.compulite.com/patch.html#create-and-patch-imported-fixtures)
+-  [6.5.   Configuring Physical DMX 1/0](https://vibemanual.compulite.com/patch.html#configuring-physical-dmx-10)
+-  [6.6.   Patching Inputs](https://vibemanual.compulite.com/patch.html#patching-inputs)
+-  [6.7.   Parking Addresses and Fixtures](https://vibemanual.compulite.com/patch.html#parking-addresses-and-fixtures)
 
 
 ## Fixture Sets
 
 Like other lighting consoles, Vibe contains an extensive **Device Library** with DMX parameter mapping for fixtures, media servers, and common miscellaneous devices like smoke machines. Before a device can be programmed it must be imported and patched to DMX addresses. Vibe has an advanced numbering system that allows devices to be grouped into five familiar categories called **SETS**. Custom **SETS** may also be created. Numbering in all sets may be freely changed if there are no overlapping numbers. Each Set has a unique ID.
 
-**Set ID numbers: 0 = [Fixture]** is a special global numbering set that must also reference one of the other sets. All devices must be assigned a Fixture number and one of the other set numbers. **1 = [Channel]** is a numbering set that would normally be used for conventional single parameter devices. **2 = [SPOT]** is a numbering set that would mainly be used for multi-parameter devices like moving lights. **3 = [MATRIX]** is a numbering set that would mainly be used for RGB or other non-moving LED fixtures. (also useful in pixel mapping devices) **4 = [SERVER]** is a numbering system used for media servers.
+**Set ID numbers:** 
+
+  - 0 = **[Fixture]** is a special global numbering set that must also reference one of the other sets. All devices must be assigned a Fixture number and one of the other set numbers. 
+  - 1 = **[Channel]** is a numbering set that would normally be used for conventional single parameter devices. 
+  - 2 = **[SPOT]** is a numbering set that would mainly be used for multi-parameter devices like moving lights. 
+  - 3 = **[MATRIX]** is a numbering set that would mainly be used for RGB or other non-moving LED fixtures. (also useful in pixel mapping devices) 
+  - 4 = **[SERVER]** is a numbering system used for media servers.
 
 Each **SET** may have Fixtures numbered from 1 ⟶ 999999 To patch a device, you must first move focus to the main monitor and press the [PATCH] Workspace Template key. By default, the first page will contain all the displays needed for patching.
 
@@ -106,7 +109,7 @@ Fixtures may be searched directly by name using the Advanced Device Search. Sear
 
 1. In the **Create and Patch** fixtures pop-up, type the quantity in the red highlighted field via the keypad or flick/drag to browse the list until the desired quantity number is found then tap the number.
     
-2. If the **Quantity** number is not highlighted in Red, tap the field to make it active.
+2. If the **Quantity** number is not highlighted in <span style="color:Red">Red</span>, tap the field to make it active.
     
 3. Press the ⟶ key on the keypad to tab to the next field, or tap in the {SET} field. The appropriate SET for the selected fixture should automatically be selected, but as some fixtures don't always cleanly fit into standard categories, check that the correct Set is selected. If not, flick/drag to browse to the correct SET then tap it. You may also type the Set number (0-5).
     
@@ -126,8 +129,8 @@ Fixtures may be searched directly by name using the Advanced Device Search. Sear
 10. Press the ⟶ key on the keypad to tab to the next field, or tap any number in the **ADDRESS** field.
     
 
-> By default, the interval between fixtures of the same type is fixed.
-> Using the INTERVAL field, a custom interval may be set.
+>👉 By default, the interval between fixtures of the same type is fixed.
+Using the INTERVAL field, a custom interval may be set.
 
 11. To complete **CREATE and PATCH** tap the **{APPLY & CONTINUE}** key in the bottom **right corner of the pop-up**, Press **[ENTER]**, or tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to close the pop-up and return to the patch workspace.
 
@@ -141,12 +144,9 @@ Fixtures may be searched directly by name using the Advanced Device Search. Sear
 
 ◾ [ADDRESS] [#].[#] +/ - ⟶ [#].[#] [FIXTURE] [#] [STORE].
 
-> Addresses may also be typed in absolute format: 1 ⟶ 32,768 (64
-> Universes standard). The system will automatically assign the correct
-> universe
-> 
-> When starting from a {New Show} only {Physical DMX outputs} are
-> enabled. Network universes must be enabled in **PATCH** {DMX Settings}
+>👉 Addresses may also be typed in absolute format: 1 ⟶ 32,768 (64U niverses standard). The system will automatically assign the correct universe.
+ 
+>👉 When starting from a {New Show} only {Physical DMX outputs} are enabled. Network universes must be enabled in **PATCH** {DMX Settings}
 
 ### Drag and Drop Patch
 
@@ -169,7 +169,7 @@ Fixtures may be searched directly by name using the Advanced Device Search. Sear
 7. Drag the fixture icon from the Fixtures list onto the Universe View grid. All associated DMX addresses for the fixture will turn green. Drop the fixture icon on the desired DMX start address for the fixture. - The fixture is now patched.
     
 
-Multiple fixtures may be selected by swiping ⤴ or ⤵ in the Fixtures list.
+>👉 Multiple fixtures may be selected by swiping ⤴ or ⤵ in the Fixtures list.
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FFTYnnKHRjr3DV3bFTnMN%2F6.4.1.webp?alt=media&token=7a7991b5-3817-4e6d-8fd0-cbd9c031c839)
 
@@ -187,7 +187,7 @@ Multiple fixtures may be selected by swiping ⤴ or ⤵ in the Fixtures list.
 1. Drag and drop the same fixture to multiple DMX offsets.
     
 
-> All types of fixtures may be multi-patched but caution should be used when  multi-patching multi-parameter fixtures.
+>👉 All types of fixtures may be multi-patched but caution should be used when  multi-patching multi-parameter fixtures.
 
 **Unpatch fixtures using drag and drop:**
 
@@ -195,51 +195,52 @@ Multiple fixtures may be selected by swiping ⤴ or ⤵ in the Fixtures list.
     
 2. Drag the selected block of fixtures towards the bottom of the screen - a waste basket icon will appear at the bottom of the workspace.
     
-3. Drag the block until the fixture icon is over the waste basket and release the fixture - the fixture will now be unpatched.
+3. Drag the block until the fixture icon is over the waste basket and release the fixture - the fixture will now be unpatched.  
 
 ### Modify Patch
 
-
-> Once patched fixtures can be modified using keypad syntax or using the two Patch Toolbars in the Patch Workspace.
+Once patched fixtures can be modified using keypad syntax or using the two Patch Toolbars in the Patch Workspace.
 
 **Toolbar with no fixture selection:**
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FYBzeJ8a39N937xjx5S3n%2F6.4.2.png?alt=media&token=d1b58421-5fff-40dd-8c9a-f14f6944e6c8)
 
-◾ {CLEAR PATCH} - Opens up Clear Patch pop-up. 
+  ◾ {CLEAR PATCH} - Opens up Clear Patch pop-up. 
+    
+  ◾ {RENUMBER} - Opens up RENUMBER: FIXTURE pop-up. 
 
-◾ {RENUMBER} - Opens up RENUMBER: FIXTURE pop-up. 
+  ◾ {ADD FIXTURE} - Opens the Create And Patch pop-up. 
 
-◾ {ADD FIXTURE} - Opens the Create And Patch pop-up. 
-
-◾ {DELETE FIXTURE} - Opens up Delete Fixtures pop-up.
+  ◾ {DELETE FIXTURE} - Opens up Delete Fixtures pop-up.
 
 **Toolbar with fixture selection:**
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FFrU1z04uJEKhtVcZTvFA%2F6.4.2.1.webp?alt=media&token=4f322af9-9116-4d1e-b01b-cc15538d482a)
 
-◾ [FIXTURE] [#] {PATCH} - Opens up Patch Fixture pop-up. 
+  ◾ [FIXTURE] [#] {PATCH} - Opens up Patch Fixture pop-up. 
 
-◾ [FIXTURE] [#] {RENUMBER} - Opens up RENUMBER: FIXTURE pop-up with fixture already selected. 
+  ◾ [FIXTURE] [#] {RENUMBER} - Opens up RENUMBER: FIXTURE pop-up with fixture already selected. 
 
-◾ [FIXTURE] [#] {FIXTURE CALIBRATION} - Opens up Fixture Calibration pop-up with the fixture selected. 
-See: 20. XYZ Fixture Calibration 
+  ◾ [FIXTURE] [#] {FIXTURE CALIBRATION} - Opens up Fixture Calibration pop-up with the fixture selected. 
+      
+See: 
+[20. XYZ Fixture Calibration](https://vibemanual.compulite.com/xyz-fixture-calibration.html) 
 
-◾ [FIXTURE] [#] {CLEAR PATCH} - Opens the Clear Patch confirmation popup 
+  ◾ [FIXTURE] [#] {CLEAR PATCH} - Opens the Clear Patch confirmation popup 
 
-◾ [FIXTURE] [#] {DELETE FIXTURE} - Opens the Delete Fixture confirmation pop-up
+  ◾ [FIXTURE] [#] {DELETE FIXTURE} - Opens the Delete Fixture confirmation pop-up
 
 **Modify the patch using keypad syntax:** 
 
-◾ [FIXTURE] [#] {CLEAR PATCH} - From the Editor toolbar. 
+  ◾ [FIXTURE] [#] {CLEAR PATCH} - From the Editor toolbar. 
 
-◾ [FIXTURE] [#] [DELETE] - Only works in the Patch Workspace.
+  ◾ [FIXTURE] [#] [DELETE] - Only works in the Patch Workspace.
 
 ## Configuring Physical DMX 1/0
 
 
-> By default, DMX is mapped to the physical ports on a 1:1 basis. 
-> DMX is always transmitted but can be remapped to anyone of the supported 256 DMX universes.
+ By default, DMX is mapped to the physical ports on a 1:1 basis. 
+ DMX is always transmitted but can be remapped to anyone of the supported 256 DMX universes.
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F373A2JvOjPY60S5OzfN5%2F6.5.png?alt=media&token=2c5c721d-669e-4b91-b171-6abbcc354f10)
 
@@ -258,9 +259,9 @@ See: 20. XYZ Fixture Calibration
 
 1. Tap a patched output - Two additional options will appear below the Output Destination Universe box. 
 
-◾ {Make Input 1} - Makes the selected outputs into Input 1. The Physical connector display will turn white to indicate it is now an input. 
+    ◾ {Make Input 1} - Makes the selected outputs into Input 1. The Physical connector display will turn white to indicate it is now an input. 
 
-◾ {Make Input 2} - Makes the selected outputs into Input 2. The Physical connector display will turn white to indicate it is now an input.
+    ◾ {Make Input 2} - Makes the selected outputs into Input 2. The Physical connector display will turn white to indicate it is now an input.
     
 
 **Change input back to output:**
@@ -272,14 +273,18 @@ See: 20. XYZ Fixture Calibration
 
 **Change DMX refresh rate:**
 
-◾ Vibe will a**l**ways transmit DMX at the fastest refresh rate it can (38 - 44Hz). Sometimes older equipment cannot handle the high refresh rate, so it may be reduced using the DMX Max Rate wheel. It is not recommended to go below 28Hz as some jitter may be observed.
+    ◾ Vibe will a**l**ways transmit DMX at the fastest refresh rate it can (38 - 44Hz). Sometimes older equipment cannot handle the high refresh rate, so it may be reduced using the DMX Max Rate wheel. It is not recommended to go below 28Hz as some jitter may be observed.
 
 ## Patching Inputs
 
 **The following objects may be mapped to DMX inputs**: 
+
 - DMX input mapped directly to the console's DMX outputs 
+
 - DMX input mapped to Macros 
+
 - DMX input mapped to Controllers 
+
 - DMX input mapped to fixtures
 
 **Map a DMX output to a DMX input:**
