--- a/20-XYZ-Fixture-Calibration.Rmd
+++ b/20-XYZ-Fixture-Calibration.Rmd
@@ -4,9 +4,8 @@ Fixtures can be calibrated easily using XYZ values of the Visualizer. When fixtu
 
 **The following is covered in this chapter:**
 
-- 20.1. Calibration in WYSIWYG
-- 20.2. Calibration in Capture
-
+- [20.1. Calibration in WYSIWYG](https://vibemanual.compulite.com/xyz-fixture-calibration.html#calibration-in-wysiwyg)
+- [20.2. Calibration in Capture](https://vibemanual.compulite.com/xyz-fixture-calibration.html#calibration-in-capture)
 
 ## Calibration in WYSIWYG
 
