--- a/08-Programming-Concepts.Rmd
+++ b/08-Programming-Concepts.Rmd
@@ -3,10 +3,9 @@
 
 **The following is covered in this chapter:**
 
--  8.1. Operational Philosophy
--  8.2. Command Syntax
--  8.3. Command Line
-
+-  [8.1. Operational Philosophy](https://vibemanual.compulite.com/programming-concepts.html#operational-philosophy)
+-  [8.2. Command Syntax](https://vibemanual.compulite.com/programming-concepts.html#command-syntax)
+-  [8.3. Command Line](https://vibemanual.compulite.com/programming-concepts.html#command-line)
 
 ## Operational Philosophy
 
