--- a/15-Dark-Parameter-Positioning.Rmd
+++ b/15-Dark-Parameter-Positioning.Rmd
@@ -4,9 +4,9 @@ This chapter provides an overview of Vibe's Graphical User Interface (GUI).
 
 **The following is covered in this chapter:**
 
-- 15.1. Look Ahead (Move in Dark)
-- 15.2. Look Ahead Cue (Mark)
-- 15.3. Force Black
+- [15.1. Look Ahead (Move in Dark)](https://vibemanual.compulite.com/dark-parameter-positioning.html#look-ahead-move-in-dark)
+- [15.2. Look Ahead Cue (Mark)](https://vibemanual.compulite.com/dark-parameter-positioning.html#look-ahead-cue-mark)
+- [15.3. Force Black](https://vibemanual.compulite.com/dark-parameter-positioning.html#force-black)
 
 
 ## Look Ahead (Move in Dark)
