--- a/26-Working-with-Multiple-Consoles.Rmd
+++ b/26-Working-with-Multiple-Consoles.Rmd
@@ -2,7 +2,8 @@
 
 
 **The following is covered in this chapter:**
-- 26. Working with Multiple Consoles
+
+- [26. Working with Multiple Consoles](https://vibemanual.compulite.com/working-with-multiple-consoles.html#working-with-multiple-consoles-1)
 
 
 ## Working with Multiple Consoles
